# codecharacter-simulator-2020

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  FindClangFormat.cmake  FindCmakeFormat.cmake  README.md  clang-format.cmake  cmake-format.cmake  complie.sh
.circleci/: clang-format-check.sh  cmake-format-check.sh  config.yml  linter-check.sh
.githooks/: circleci_validate.sh  clangformat.sh  cmakeformat.sh  pre-commit
cmake_modules/: FindClangFormat.cmake  clang-format.cmake  cmake-format.cmake
docker/base/: Dockerfile
docker/compiler/: Dockerfile
docker/runner/: Dockerfile
docs/source/: conf.py  constants.rst  drivers.rst  index.rst  logger.rst  physics.rst  player_wrapper.rst  state.rst
linter_config/: clang-format.cmake  cmake-format.cmake
src/constants/: CMakeLists.txt
src/constants/include/constants/: actor.h  constants.h  map.h  score_manager.h  simulator.h
src/drivers/: CMakeLists.txt
src/drivers/include/drivers/: game_result.h  main_driver.h  player_driver.h  player_result.h  timer.h
src/drivers/include/drivers/shared_memory_utils/: shared_buffer.h  shared_memory_main.h  shared_memory_player.h
src/drivers/src/: main_driver.cpp  player_driver.cpp  timer.cpp
src/drivers/src/shared_memory_utils/: shared_buffer.cpp  shared_memory_main.cpp  shared_memory_player.cpp
src/game/: CMakeLists.txt
src/game/include/game/: game.h
src/game/src/: game.cpp
src/llvm_pass/: CMakeLists.txt
src/llvm_pass/src/: inst_count_pass.cpp
src/logger/: CMakeLists.txt
src/logger/include/logger/: error_type.h  logger.h
src/logger/include/logger/interfaces/: i_logger.h
src/logger/src/: logger.cpp
src/main/: CMakeLists.txt  main.cpp
src/physics/: CMakeLists.txt
src/physics/include/physics/: vector.hpp
src/player_code/: CMakeLists.txt
src/player_code/include/player_code/: player_code.h
src/player_code/include/player_code/test/: player_code_test_0.h  player_code_test_1.h  player_code_test_2.h
src/player_code/src/: player_code.cpp
src/player_code/test/: player_code_test_0.cpp  player_code_test_1.cpp  player_code_test_2.cpp
src/player_wrapper/: CMakeLists.txt
src/player_wrapper/include/player_wrapper/: player_code_wrapper.h  transfer_state.h
src/player_wrapper/include/player_wrapper/interfaces/: i_player_code.h
src/player_wrapper/src/: player_code_wrapper.cpp
src/players/: CMakeLists.txt
src/players/src/: player.cpp
src/state/: CMakeLists.txt
src/state/include/state/: command_giver.h  player_state.h  state.h  state_syncer.h  transform_request.h  utilities.h
src/state/include/state/actor/: actor.h  blaster.h  bot.fwd.h  bot.h  tower.fwd.h  tower.h  unit.h
src/state/include/state/actor/bot_states/: bot_blast_state.h  bot_dead_state.h  bot_idle_state.h  bot_move_blast_state.h  bot_move_state.h  bot_move_to_blast_state.h  bot_move_to_transform_state.h  bot_move_transform_state.h  bot_state.h  bot_transform_state.h
src/state/include/state/actor/interfaces/: i_actor_state.h
src/state/include/state/actor/tower_states/: tower_blast_state.h  tower_dead_state.h  tower_idle_state.h  tower_state.h
src/state/include/state/interfaces/: i_command_giver.h  i_command_taker.h  i_state_syncer.h  i_updatable.h
src/state/include/state/map/: map.h
src/state/include/state/path_planner/: path_graph.h  path_planner.h  waypoint_graph.h
src/state/include/state/path_planner/graph/: graph.h  node.h  node_edge_list.h  open_list_entry.h
src/state/include/state/path_planner/interfaces/: i_path_planner.h
src/state/include/state/score_manager/: score_manager.h
src/state/src/: command_giver.cpp  player_state.cpp  state.cpp  state_helpers.cpp  state_syncer.cpp  transform_request.cpp
src/state/src/actor/: actor.cpp  blaster.cpp  bot.cpp  tower.cpp  unit.cpp
src/state/src/actor/bot_states/: bot_blast_state.cpp  bot_dead_state.cpp  bot_idle_state.cpp  bot_move_blast_state.cpp  bot_move_state.cpp  bot_move_to_blast_state.cpp  bot_move_to_transform_state.cpp  bot_move_transform_state.cpp  bot_state.cpp  bot_transform_state.cpp
src/state/src/actor/tower_states/: tower_blast_state.cpp  tower_dead_state.cpp  tower_idle_state.cpp  tower_state.cpp
src/state/src/map/: map.cpp
src/state/src/path_planner/: path_graph.cpp  path_graph_helper.cpp  path_planner.cpp  waypoint_graph.cpp  waypoint_graph_helper.cpp
src/state/src/path_planner/graph/: graph.cpp
src/state/src/score_manager/: score_manager.cpp
test/: CMakeLists.txt  test_main.cpp
test/drivers/: main_driver_test.cpp  main_driver_test_player.cpp  timer_test.cpp
test/llvm_pass/: llvm_pass_test.cpp
test/logger/: logger_test.cpp
test/logger/mocks/: logger_mock.h
test/physics/: vector_test.cpp
test/player_wrapper/: transfer_state_test.cpp
test/state/: bot_test.cpp  command_giver_test.cpp  graph_test.cpp  map_test.cpp  path_graph_test.cpp  path_planner_test.cpp  player_state_test.cpp  score_manager_test.cpp  state_syncer_test.cpp  state_test.cpp  tower_test.cpp  waypoint_graph_test.cpp
test/state/mocks/: command_giver_mock.h  state_mock.h  state_syncer_mock.h
